--- a/css/style.css
+++ b/css/style.css
@@ -16,11 +16,34 @@
      padding: 0 15px;
  }
 body {
-
+   /* font-family: 'Roboto', sans-serif; */
+    font-family: 'PT Serif', serif;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 18px;
+    color: #5e5e5e;
+}
+header {
+    font-family: 'Roboto', sans-serif;
 }
 .header__top {
     background-color: #303030;
 }
 .header__btn {
     float: right;
+    line-height: 36px;
+    color: #1b1b1b;
+    background-color: #ffc222;
+    padding: 5px 20px 4px 50px;
+    font-size: 16;
+}
+.header__btn:after {
+    content: "";
+    clear: both;
+    display: block;
+}
+.header__phone, 
+.header__email {
+    color: #cbcacb;
+    letter-spacing: 0,25px;
 }
