--- a/css/style.css
+++ b/css/style.css
@@ -37,13 +37,21 @@ header {
     padding: 5px 20px 4px 50px;
     font-size: 16;
 }
-.header__btn:after {
+/*.header__contacts:after {
     content: "";
     clear: both;
     display: block;
-}
+} */
 .header__phone, 
 .header__email {
     color: #cbcacb;
     letter-spacing: 0,25px;
+    line-height: 45px;
+}
+.header__phone {
+    padding-left: 20px;
+    padding-right: 30px;
+}
+.header__email {
+    padding-left: 24px;
 }
